@@ -1,5 +1,13 @@
 2011-01-23  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	coverage: test semantics of "dummy" per-target flags
+	* tests/specflg-dummy.test: New test, ensuring that even "dummy"
+	per-target flags triggers the use of renamed objects.
+	* tests/Makefile.am (TESTS): Update.
+	Suggestion by Ralf Wildenhues.
+
+2011-01-23  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tests defs: sanitize IFS
 	* tests/defs.in ($IFS): Define to <space>, <tab>, <newline>.
 	($sp): New variable, holding a single whitespace character.
